# chalange

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  DECISIONS.md  MCP_READY.md  ONEPAGER_CZ.md  README.md  SECURITY_REVIEW.md  SKILLS DO WORKFLOW.MD  SKILL_TRACE.md  SUBMISSION_EMAIL_CZ.txt  Score Map + gates.MD  Strategický workflow pro rozhodování, co dělat dál.MD  package.json  pyproject.toml  requirements.txt
.agents/skills/gpr-version/: .env.example  CHANGELOG.md  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  MCP_READY.md  Makefile  ONEPAGER_CZ.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/gpr-version/.github/workflows/: ci.yml
.agents/skills/gpr-version/app/: audit.py  db.py  main.py  metrics.py  middleware.py  models.py  schemas.py  services.py  settings.py
.agents/skills/gpr-version/app/routers/: api.py  ops.py  ui.py
.agents/skills/gpr-version/app/static/: app.js
.agents/skills/gpr-version/app/templates/: _layout.html  alerts.html  audit.html  backup.html  board.html  dashboard.html  incident_detail.html  incidents.html
.agents/skills/gpr-version/scripts/: agent.py  backup.py  llm_client.py  restore.py  watcher.py
.agents/skills/gpr-version/tests/: conftest.py  test_api_smoke.py
.agents/skills/gpr-version/tests/features/: alert_escalates_incident.feature  move_card_audit.feature
.agents/skills/gpr-version/tests/steps/: test_alert_steps.py  test_move_card_audit_steps.py
api/: index.py
app/: __init__.py  config.py  db.py  main.py  obs.py
conductor/: spec.md
design-system/: MASTER.md
(+47 files in other folders)
